--- a/01-Data Wrangling.ipynb
+++ b/01-Data Wrangling.ipynb
@@ -1,6 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100   149  100   149    0     0   1363      0 --:--:-- --:--:-- --:--:--  1366\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100   166  100   166    0     0   1450      0 --:--:-- --:--:-- --:--:--  1456\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100   159  100   159    0     0   1463      0 --:--:-- --:--:-- --:--:--  1472\n",
+      "raw/wic.vert not overwritten\n",
+      "raw/google-transliterated.txt not overwritten\n",
+      "raw/bible-original.txt not overwritten\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download if on Colab\n",
+    "!curl -O https://github.com/jsoma/transliteration_project/raw/master/raw/wic.vert\n",
+    "!curl -O https://github.com/jsoma/transliteration_project/raw/master/raw/google-transliterated.txt\n",
+    "!curl -O https://github.com/jsoma/transliteration_project/raw/master/raw/bible-original.txt\n",
+    "    \n",
+    "!mkdir -p raw\n",
+    "!mv -vn wic.vert raw/wic.vert\n",
+    "!mv -vn google-transliterated.txt raw/google-transliterated.txt\n",
+    "!mv -vn bible-original.txt raw/bible-original.txt\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -13,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +78,7 @@
        " 'ለክርስቶስ መመስከሬ በእናንተ ዘንድ እንደ ጸና፥ በነገር ሁሉ በቃልም ሁሉ በእውቀትም ሁሉ በእርሱ ባለ ጠጎች እንድትሆኑ ተደርጋችኋልና።  \\n']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +103,7 @@
        " 'lekirisitosi memesikerē be’inanite zenidi inide ts’ena፥ benegeri hulu bek’alimi hulu be’iwik’etimi hulu be’irisu bale t’egochi iniditihonu tederigachiḫwalina።  \\n']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
