added wrangling to opennmt

--- a/01-Data Wrangling.ipynb
+++ b/01-Data Wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -11,13 +11,13 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100   149  100   149    0     0   1363      0 --:--:-- --:--:-- --:--:--  1366\n",
+      "100 4897k  100 4897k    0     0  6372k      0 --:--:-- --:--:-- --:--:-- 6377k\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100   166  100   166    0     0   1450      0 --:--:-- --:--:-- --:--:--  1456\n",
+      "100 26419  100 26419    0     0   144k      0 --:--:-- --:--:-- --:--:--  144k\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100   159  100   159    0     0   1463      0 --:--:-- --:--:-- --:--:--  1472\n",
+      "100 33267  100 33267    0     0   290k      0 --:--:-- --:--:-- --:--:--  292k\n",
       "raw/wic.vert not overwritten\n",
       "raw/google-transliterated.txt not overwritten\n",
       "raw/bible-original.txt not overwritten\n"
@@ -26,11 +26,13 @@
    ],
    "source": [
     "# Download if on Colab\n",
-    "!curl -O https://github.com/jsoma/transliteration_project/raw/master/raw/wic.vert\n",
-    "!curl -O https://github.com/jsoma/transliteration_project/raw/master/raw/google-transliterated.txt\n",
-    "!curl -O https://github.com/jsoma/transliteration_project/raw/master/raw/bible-original.txt\n",
+    "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/wic.vert\n",
+    "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/google-transliterated.txt\n",
+    "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/bible-original.txt\n",
     "    \n",
     "!mkdir -p raw\n",
+    "\n",
+    "# -vn verbose + don't overwrite\n",
     "!mv -vn wic.vert raw/wic.vert\n",
     "!mv -vn google-transliterated.txt raw/google-transliterated.txt\n",
     "!mv -vn bible-original.txt raw/bible-original.txt\n"
