--- a/02-OpenNMT training by full sentences.ipynb
+++ b/02-OpenNMT training by full sentences.ipynb
@@ -1,6 +1,176 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100 4897k  100 4897k    0     0  7922k      0 --:--:-- --:--:-- --:--:-- 7912k\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100 26419  100 26419    0     0   255k      0 --:--:-- --:--:-- --:--:--  255k\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100 33267  100 33267    0     0   320k      0 --:--:-- --:--:-- --:--:--  321k\n",
+      "raw/wic.vert not overwritten\n",
+      "raw/google-transliterated.txt not overwritten\n",
+      "raw/bible-original.txt not overwritten\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download if on Colab\n",
+    "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/wic.vert\n",
+    "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/google-transliterated.txt\n",
+    "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/bible-original.txt\n",
+    "    \n",
+    "!mkdir -p raw\n",
+    "\n",
+    "# -vn verbose + don't overwrite\n",
+    "!mv -vn wic.vert raw/wic.vert\n",
+    "!mv -vn google-transliterated.txt raw/google-transliterated.txt\n",
+    "!mv -vn bible-original.txt raw/bible-original.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>orig</th>\n",
+       "      <th>trans</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>በእግዚአብሔር ፈቃድ የኢየሱስ ክርስቶስ ሐዋርያ ሊሆን የተጠራ ጳውሎስ ወን...</td>\n",
+       "      <td>be’igizī’ābiḥēri fek’adi ye’īyesusi kirisitos...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>በቆሮንቶስ ላለች ለእግዚአብሔር ቤተ ክርስቲያን፥ በክርስቶስ ኢየሱስ ለተቀ...</td>\n",
+       "      <td>bek’oronitosi lalechi le’igizī’ābiḥēri bēte k...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ከእግዚአብሔር ከአባታችን ከጌታም ከኢየሱስ ክርስቶስ ጸጋና ሰላም ለእናንተ...</td>\n",
+       "      <td>ke’igizī’ābiḥēri ke’ābatachini kegētami ke’īy...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>በክርስቶስ ኢየሱስ ስላመናችሁ በተሰጣችሁ በእግዚአብሔር ጸጋ ምክንያት ሁል...</td>\n",
+       "      <td>bekirisitosi īyesusi silamenachihu beteset’ach...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ለክርስቶስ መመስከሬ በእናንተ ዘንድ እንደ ጸና፥ በነገር ሁሉ በቃልም ሁሉ...</td>\n",
+       "      <td>lekirisitosi memesikerē be’inanite zenidi inid...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                orig  \\\n",
+       "0  በእግዚአብሔር ፈቃድ የኢየሱስ ክርስቶስ ሐዋርያ ሊሆን የተጠራ ጳውሎስ ወን...   \n",
+       "1  በቆሮንቶስ ላለች ለእግዚአብሔር ቤተ ክርስቲያን፥ በክርስቶስ ኢየሱስ ለተቀ...   \n",
+       "2  ከእግዚአብሔር ከአባታችን ከጌታም ከኢየሱስ ክርስቶስ ጸጋና ሰላም ለእናንተ...   \n",
+       "3  በክርስቶስ ኢየሱስ ስላመናችሁ በተሰጣችሁ በእግዚአብሔር ጸጋ ምክንያት ሁል...   \n",
+       "4  ለክርስቶስ መመስከሬ በእናንተ ዘንድ እንደ ጸና፥ በነገር ሁሉ በቃልም ሁሉ...   \n",
+       "\n",
+       "                                               trans  \n",
+       "0  be’igizī’ābiḥēri fek’adi ye’īyesusi kirisitos...  \n",
+       "1  bek’oronitosi lalechi le’igizī’ābiḥēri bēte k...  \n",
+       "2  ke’igizī’ābiḥēri ke’ābatachini kegētami ke’īy...  \n",
+       "3  bekirisitosi īyesusi silamenachihu beteset’ach...  \n",
+       "4  lekirisitosi memesikerē be’inanite zenidi inid...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "original = open(\"raw/bible-original.txt\").readlines()\n",
+    "transliterated = open(\"raw/google-transliterated.txt\").readlines()\n",
+    "\n",
+    "sentences = pd.DataFrame({\n",
+    "    'orig': original,\n",
+    "    'trans': transliterated\n",
+    "})\n",
+    "sentences.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training on (152, 2)\n",
+      "Testing on (39, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "train, test = train_test_split(sentences, test_size=0.2)\n",
+    "\n",
+    "print(\"Training on\", train.shape)\n",
+    "print(\"Testing on\", test.shape)\n",
+    "\n",
+    "# Save as training\n",
+    "train.trans.to_csv(\"data/src-train.txt\", header=False, index=False)\n",
+    "train.orig.to_csv(\"data/tgt-train.txt\", header=False, index=False)\n",
+    "\n",
+    "# Save as testing\n",
+    "test.trans.to_csv(\"data/src-val.txt\", header=False, index=False)\n",
+    "test.orig.to_csv(\"data/tgt-val.txt\", header=False, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
