few edits for colab

--- a/02-OpenNMT training by full sentences.ipynb
+++ b/02-OpenNMT training by full sentences.ipynb
@@ -154,6 +154,8 @@
     "print(\"Training on\", train.shape)\n",
     "print(\"Testing on\", test.shape)\n",
     "\n",
+    "!mkdir -p data\n",
+    "\n",
     "# Save as training\n",
     "train.trans.to_csv(\"data/src-train.txt\", header=False, index=False)\n",
     "train.orig.to_csv(\"data/tgt-train.txt\", header=False, index=False)\n",
@@ -311,6 +313,7 @@
     }
    ],
    "source": [
+    "# Change to false to get GPU power on Colab\n",
     "if True:\n",
     "    !onmt_train \\\n",
     "        -data data/demo \\\n",
@@ -384,7 +387,6 @@
     }
    ],
    "source": [
-    "#r = exec(\"ls -t *model* | head -n 1\")\n",
     "import subprocess\n",
     "model_name = subprocess.run(\"ls -t *model* | head -n 1\",\n",
     "                            shell=True,\n",
