--- a/01-Data Wrangling.ipynb
+++ b/01-Data Wrangling.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "Data is a bit of [the Bible](http://bible.geezexperience.com/amharic/list.php?book=46&chapter=2) pasted into Google Translate and cutting and pasting the transliteration from below.\n",
     "\n",
-    "I'm not sure what transliteration scheme they use, but it is not SABER."
+    "I'm not sure what transliteration scheme they use, but it is not SERA."
    ]
   },
   {
@@ -245,7 +245,7 @@
    "source": [
     "# Vert files\n",
     "\n",
-    "These were transliterated using **SABER**, which is different than what was done with the Google transliterations!"
+    "These were transliterated using **SERA**, which is different than what was done with the Google transliterations!"
    ]
   },
   {
@@ -433,7 +433,7 @@
    "source": [
     "# Mixing them together\n",
     "\n",
-    "Not a good idea since there are *so* many more things in the vert files. Y'know since SABER is automated we can probably just ignore the vert files and find a Pythonic way to convert from Ethiopic script to SABER?"
+    "Not a good idea since there are *so* many more things in the vert files. Y'know since SERA is automated we can probably just ignore the vert files and find a Pythonic way to convert from Ethiopic script to SERA?"
    ]
   },
   {
