remove @ from simplified lookup table

--- a/Transliteration.ipynb
+++ b/Transliteration.ipynb
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -1446,7 +1446,7 @@
        " 'ሄ': ['he'],\n",
        " 'ህ': ['h', 'hi', 'he'],\n",
        " 'ሆ': ['hwo', 'ho'],\n",
-       " 'ለ': ['la', 'le', 'l@'],\n",
+       " 'ለ': ['la', 'le'],\n",
        " 'ሉ': ['lu'],\n",
        " 'ሊ': ['li'],\n",
        " 'ላ': ['la'],\n",
@@ -1462,7 +1462,7 @@
        " 'ሕ': ['hi', 'h', 'he'],\n",
        " 'ሖ': ['hwo', 'ho'],\n",
        " 'ሗ': ['', 'hwa'],\n",
-       " 'መ': ['m@', 'ma', 'me'],\n",
+       " 'መ': ['ma', 'me'],\n",
        " 'ሙ': ['mu'],\n",
        " 'ሚ': ['mi'],\n",
        " 'ማ': ['ma'],\n",
@@ -1474,7 +1474,7 @@
        " 'ሟ': ['', 'mwa'],\n",
        " 'ᎂ': ['', 'mwe'],\n",
        " 'ᎃ': ['', 'mwe', 'mw'],\n",
-       " 'ሠ': [\"'se\", 'sa', 's@'],\n",
+       " 'ሠ': [\"'se\", 'sa'],\n",
        " 'ሡ': ['su', \"'su\"],\n",
        " 'ሢ': ['si', \"'si\"],\n",
        " 'ሣ': [\"'sa\", 'sa'],\n",
@@ -1482,7 +1482,7 @@
        " 'ሥ': ['se', \"'s\", 'si'],\n",
        " 'ሦ': [\"'so\", 'swo', 'so'],\n",
        " 'ሧ': ['', \"'swa\", 'swa'],\n",
-       " 'ረ': ['ra', 're', 'r@'],\n",
+       " 'ረ': ['ra', 're'],\n",
        " 'ሩ': ['ru'],\n",
        " 'ሪ': ['ri'],\n",
        " 'ራ': ['ra'],\n",
@@ -1490,7 +1490,7 @@
        " 'ር': ['ri', 're', 'r'],\n",
        " 'ሮ': ['ro', 'rwo'],\n",
        " 'ሯ': ['', 'rwa'],\n",
-       " 'ሰ': ['se', 'sa', 's@'],\n",
+       " 'ሰ': ['se', 'sa'],\n",
        " 'ሱ': ['su'],\n",
        " 'ሲ': ['si'],\n",
        " 'ሳ': ['sa'],\n",
@@ -1498,7 +1498,7 @@
        " 'ስ': ['se', 's', 'si'],\n",
        " 'ሶ': ['swo', 'so'],\n",
        " 'ሷ': ['', 'swa'],\n",
-       " 'ሸ': ['', 's@', 'xe', 'cha', 'sa', 'sha'],\n",
+       " 'ሸ': ['', 'xe', 'cha', 'sa', 'sha'],\n",
        " 'ሹ': ['', 'chu', 'shu', 'su', 'xu'],\n",
        " 'ሺ': ['', 'shi', 'chi', 'xi', 'si'],\n",
        " 'ሻ': ['', 'xa', 'cha', 'sa', 'sha'],\n",
@@ -1506,7 +1506,7 @@
        " 'ሽ': ['', 'shi', 'x', 'se', 'si', 'che'],\n",
        " 'ሾ': ['', 'cho', 'sho', 'xo', 'swo', 'so'],\n",
        " 'ሿ': ['', 'shwa', 'xwa', 'swa'],\n",
-       " 'ቀ': ['ka', 'qa', 'k@', 'qe'],\n",
+       " 'ቀ': ['ka', 'qa', 'qe'],\n",
        " 'ቁ': ['qu', 'ku'],\n",
        " 'ቂ': ['qi', 'ki'],\n",
        " 'ቃ': ['ka', 'qa'],\n",
@@ -1514,11 +1514,11 @@
        " 'ቅ': ['q', 'qe', 'ki'],\n",
        " 'ቆ': ['ko', 'qo', 'qwo'],\n",
        " 'ቇ': [''],\n",
-       " 'ቈ': ['kwa', 'qwe', 'kw@', 'kwe', 'qwa', 'qua'],\n",
+       " 'ቈ': ['kwa', 'qwe', 'kwe', 'qwa', 'qua'],\n",
        " 'ቊ': ['qwi', 'kwi', 'qui'],\n",
        " 'ቋ': ['qwa', 'kwa', 'qua'],\n",
        " 'ቌ': ['kwe', 'que', 'qwe'],\n",
-       " 'ቍ': ['qw', 'kwi', 'qwe', 'que', 'qu@'],\n",
+       " 'ቍ': ['qw', 'kwi', 'qwe', 'que'],\n",
        " 'ⷀ': ['', 'qa', \"'qe\"],\n",
        " 'ⷁ': ['', 'qu', \"'qu\"],\n",
        " 'ⷂ': ['', 'qi', \"'qi\"],\n",
@@ -1538,7 +1538,7 @@
        " 'ቛ': ['', 'qwa'],\n",
        " 'ቜ': ['', 'qwe'],\n",
        " 'ቝ': ['', 'qw', 'qwe'],\n",
-       " 'በ': ['b@', 'ba', 'be'],\n",
+       " 'በ': ['ba', 'be'],\n",
        " 'ቡ': ['bu'],\n",
        " 'ቢ': ['bi'],\n",
        " 'ባ': ['ba'],\n",
@@ -1550,7 +1550,7 @@
        " 'ቧ': ['', 'bwa'],\n",
        " 'ᎆ': ['', 'bwe'],\n",
        " 'ᎇ': ['', 'bw', 'bwe'],\n",
-       " 'ቨ': ['', 'v@', 've', 'va'],\n",
+       " 'ቨ': ['', 've', 'va'],\n",
        " 'ቩ': ['vu', ''],\n",
        " 'ቪ': ['', 'vi'],\n",
        " 'ቫ': ['', 'va'],\n",
@@ -1558,7 +1558,7 @@
        " 'ቭ': ['', 'v', 've', 'vi'],\n",
        " 'ቮ': ['', 'vo'],\n",
        " 'ቯ': ['', 'vwa'],\n",
-       " 'ተ': ['t@', 'te', 'ta'],\n",
+       " 'ተ': ['te', 'ta'],\n",
        " 'ቱ': ['tu'],\n",
        " 'ቲ': ['ti'],\n",
        " 'ታ': ['ta'],\n",
@@ -1566,7 +1566,7 @@
        " 'ት': ['t', 'ti', 'te'],\n",
        " 'ቶ': ['two', 'to'],\n",
        " 'ቷ': ['', 'twa'],\n",
-       " 'ቸ': ['', 'ca', 'tcha', 'cha', 'ce', 'c@'],\n",
+       " 'ቸ': ['', 'ca', 'tcha', 'cha', 'ce'],\n",
        " 'ቹ': ['', 'tchu', 'chu', 'cu'],\n",
        " 'ቺ': ['', 'chi', 'ci', 'tchi'],\n",
        " 'ቻ': ['', 'ca', 'tcha', 'cha'],\n",
@@ -1581,12 +1581,12 @@
        " 'ኄ': [\"'he\", 'he'],\n",
        " 'ኅ': ['hi', \"'h\", 'he'],\n",
        " 'ኆ': ['hwo', \"'ho\", 'ho'],\n",
-       " 'ኈ': ['hwa', 'hua', 'hwe', 'hw@'],\n",
+       " 'ኈ': ['hwa', 'hua', 'hwe'],\n",
        " 'ኊ': ['hwi', 'hui'],\n",
        " 'ኋ': ['hwa', 'hua'],\n",
        " 'ኌ': ['hwe', 'hue'],\n",
        " 'ኍ': ['hwe', 'hw', 'hwi', 'hue'],\n",
-       " 'ነ': ['n@', 'na', 'ne'],\n",
+       " 'ነ': ['na', 'ne'],\n",
        " 'ኑ': ['nu'],\n",
        " 'ኒ': ['ni'],\n",
        " 'ና': ['na', \"na'\"],\n",
@@ -1594,7 +1594,7 @@
        " 'ን': ['ni', 'ne', 'n'],\n",
        " 'ኖ': ['no', 'nwo'],\n",
        " 'ኗ': ['', 'nwa'],\n",
-       " 'ኘ': ['', 'n@', 'gna', 'na', 'ne'],\n",
+       " 'ኘ': ['', 'gna', 'na', 'ne'],\n",
        " 'ኙ': ['', 'gnu', 'nu'],\n",
        " 'ኚ': ['', 'ni', 'gni'],\n",
        " 'ኛ': ['', 'gna', 'na'],\n",
@@ -1607,10 +1607,10 @@
        " 'ኢ': ['i', \"'i\", '`i'],\n",
        " 'ኣ': ['a', '`a', \"'a\"],\n",
        " 'ኤ': ['ye', 'e', \"'e\", '`e'],\n",
-       " 'እ': ['@', 'i', \"'e\", '`e'],\n",
+       " 'እ': ['i', \"'e\", '`e'],\n",
        " 'ኦ': ['`o', 'wo', 'o', \"'o\"],\n",
        " 'ኧ': ['', \"'wa\", 'a', 'ea', 'a-'],\n",
-       " 'ከ': ['ke', 'ka', 'k@'],\n",
+       " 'ከ': ['ke', 'ka'],\n",
        " 'ኩ': ['ku'],\n",
        " 'ኪ': ['ki'],\n",
        " 'ካ': ['ka'],\n",
@@ -1618,11 +1618,11 @@
        " 'ክ': ['k', 'ke', 'ki'],\n",
        " 'ኮ': ['ko', 'kwo'],\n",
        " 'ኯ': [''],\n",
-       " 'ኰ': ['kw@', 'kwe', 'kua', 'kwa'],\n",
+       " 'ኰ': ['kwe', 'kua', 'kwa'],\n",
        " 'ኲ': ['kui', 'kwi'],\n",
        " 'ኳ': ['kua', 'kwa'],\n",
        " 'ኴ': ['kwe', 'kue'],\n",
-       " 'ኵ': ['kw', 'kwi', 'kue', 'ku@', 'kwe'],\n",
+       " 'ኵ': ['kw', 'kwi', 'kue', 'kwe'],\n",
        " 'ⷈ': ['', 'ka', \"'ke\"],\n",
        " 'ⷉ': ['', \"'ku\", 'ku'],\n",
        " 'ⷊ': ['', \"'ki\", 'ki'],\n",
@@ -1630,7 +1630,7 @@
        " 'ⷌ': ['', 'ke', \"'ke\"],\n",
        " 'ⷍ': ['', 'ke', \"'k\"],\n",
        " 'ⷎ': ['', 'ko', \"'ko\"],\n",
-       " 'ኸ': ['', 'h@', 'kha', 'xa', 'ha', 'ke', 'ka'],\n",
+       " 'ኸ': ['', 'kha', 'xa', 'ha', 'ke', 'ka'],\n",
        " 'ኹ': ['', 'khu', 'hu', 'ku', 'xu'],\n",
        " 'ኺ': ['', 'khi', 'hi', 'xi', 'ki'],\n",
        " 'ኻ': ['', 'kha', 'xa', 'ha', 'ka'],\n",
@@ -1649,7 +1649,7 @@
        " 'ⷔ': ['', 'xe', 'he'],\n",
        " 'ⷕ': ['', 'x', 'he'],\n",
        " 'ⷖ': ['', 'xo', 'ho'],\n",
-       " 'ወ': ['we', 'wa', 'w@'],\n",
+       " 'ወ': ['we', 'wa'],\n",
        " 'ዉ': ['wu'],\n",
        " 'ዊ': ['wi'],\n",
        " 'ዋ': ['wa'],\n",
@@ -1661,9 +1661,9 @@
        " 'ዒ': ['i', \"'i\", '`i'],\n",
        " 'ዓ': ['a', '`a', \"'a\"],\n",
        " 'ዔ': ['e', 'ye', \"'e\", '`e'],\n",
-       " 'ዕ': ['i', \"'i\", \"'e\", '@', '`e'],\n",
+       " 'ዕ': ['i', \"'i\", \"'e\", '`e'],\n",
        " 'ዖ': ['`o', 'wo', 'o', \"'o\"],\n",
-       " 'ዘ': ['z@', 'ze', 'za'],\n",
+       " 'ዘ': ['ze', 'za'],\n",
        " 'ዙ': ['zu'],\n",
        " 'ዚ': ['zi'],\n",
        " 'ዛ': ['za'],\n",
@@ -1671,7 +1671,7 @@
        " 'ዝ': ['ze', 'z', 'zi'],\n",
        " 'ዞ': ['zwo', 'zo'],\n",
        " 'ዟ': ['', 'zwa'],\n",
-       " 'ዠ': ['', 'z@', 'zha', 'za', 'ja', 'ze'],\n",
+       " 'ዠ': ['', 'zha', 'za', 'ja', 'ze'],\n",
        " 'ዡ': ['', 'ju', 'zu', 'zhu'],\n",
        " 'ዢ': ['', 'ji', 'zhi', 'zi'],\n",
        " 'ዣ': ['', 'za', 'zha', 'ja'],\n",
@@ -1679,14 +1679,14 @@
        " 'ዥ': ['', 'je', 'zi', 'z', 'zhi', 'ze'],\n",
        " 'ዦ': ['', 'zo', 'zho', 'zwo', 'jo'],\n",
        " 'ዧ': ['', 'zwa', 'zhwa'],\n",
-       " 'የ': ['ye', 'ja', 'ya', 'y@'],\n",
+       " 'የ': ['ye', 'ja', 'ya'],\n",
        " 'ዩ': ['yu', 'ju'],\n",
        " 'ዪ': ['yi', 'ji'],\n",
        " 'ያ': ['ja', 'ya'],\n",
        " 'ዬ': ['ye', 'je'],\n",
        " 'ይ': ['ye', 'yi', 'je', 'y'],\n",
        " 'ዮ': ['yo', 'jo'],\n",
-       " 'ደ': ['d@', 'de', 'da'],\n",
+       " 'ደ': ['de', 'da'],\n",
        " 'ዱ': ['du'],\n",
        " 'ዲ': ['di'],\n",
        " 'ዳ': ['da'],\n",
@@ -1702,7 +1702,7 @@
        " 'ዽ': ['', 'de', 'd'],\n",
        " 'ዾ': ['', 'do'],\n",
        " 'ዿ': ['', 'dwa'],\n",
-       " 'ጀ': ['', 'je', 'dja', 'j@', 'ja', 'ga'],\n",
+       " 'ጀ': ['', 'je', 'dja', 'ja', 'ga'],\n",
        " 'ጁ': ['', 'ju', 'gu', 'dju'],\n",
        " 'ጂ': ['', 'dji', 'ji', 'gi'],\n",
        " 'ጃ': ['', 'ja', 'ga', 'dja'],\n",
@@ -1710,18 +1710,18 @@
        " 'ጅ': ['', 'ge', 'j', 'dje', 'ji'],\n",
        " 'ጆ': ['', 'djo', 'go', 'jo', 'gwo'],\n",
        " 'ጇ': ['', 'gwa', 'jwa'],\n",
-       " 'ገ': ['ge', 'ga', 'g@'],\n",
+       " 'ገ': ['ge', 'ga'],\n",
        " 'ጉ': ['gu'],\n",
        " 'ጊ': ['gi'],\n",
        " 'ጋ': ['ga'],\n",
        " 'ጌ': ['gye', 'ge'],\n",
        " 'ግ': ['gi', 'ge', 'g'],\n",
        " 'ጎ': ['go', 'gwo'],\n",
-       " 'ጐ': ['gua', 'gwe', 'gw@', 'gwa'],\n",
+       " 'ጐ': ['gua', 'gwe', 'gwa'],\n",
        " 'ጒ': ['gwi', 'gui'],\n",
        " 'ጓ': ['gua', 'gwa'],\n",
        " 'ጔ': ['gwe', 'gue'],\n",
-       " 'ጕ': ['gue', 'gw', 'gwi', 'gwe', 'gu@'],\n",
+       " 'ጕ': ['gue', 'gw', 'gwi', 'gwe'],\n",
        " 'ⷘ': ['', \"'ge\", 'ga'],\n",
        " 'ⷙ': ['', \"'gu\", 'gu'],\n",
        " 'ⷚ': ['', \"'gi\", 'gi'],\n",
@@ -1741,7 +1741,7 @@
        " 'ጟ': ['', 'gwa'],\n",
        " 'ⶕ': ['', 'gwe'],\n",
        " 'ⶖ': ['', 'gw', 'gwe'],\n",
-       " 'ጠ': ['t@', 'te', 'ta'],\n",
+       " 'ጠ': ['te', 'ta'],\n",
        " 'ጡ': ['tu'],\n",
        " 'ጢ': ['ti'],\n",
        " 'ጣ': ['ta'],\n",
@@ -1749,7 +1749,7 @@
        " 'ጥ': ['t', 'ti', 'te'],\n",
        " 'ጦ': ['two', 'to'],\n",
        " 'ጧ': ['', 'twa'],\n",
-       " 'ጨ': ['', 'ca', 'cha', 'ce', \"tch'a\", 'c@'],\n",
+       " 'ጨ': ['', 'ca', 'cha', 'ce', \"tch'a\"],\n",
        " 'ጩ': ['', 'chu', 'cu', \"tch'u\"],\n",
        " 'ጪ': ['', 'chi', \"tch'i\", 'ci'],\n",
        " 'ጫ': ['', 'ca', \"tch'a\", 'cha'],\n",
@@ -1757,7 +1757,7 @@
        " 'ጭ': ['', 'ce', 'chi', 'ci', 'c', \"tch'e\"],\n",
        " 'ጮ': ['', \"tch'o\", 'cwo', 'co', 'cho'],\n",
        " 'ጯ': ['', 'chwa', 'cwa'],\n",
-       " 'ጰ': ['p@', 'pa', 'pe'],\n",
+       " 'ጰ': ['pa', 'pe'],\n",
        " 'ጱ': ['pu'],\n",
        " 'ጲ': ['pi'],\n",
        " 'ጳ': ['pa'],\n",
@@ -1765,7 +1765,7 @@
        " 'ጵ': ['p', 'pi', 'pe'],\n",
        " 'ጶ': ['po', 'pwo'],\n",
        " 'ጷ': ['', 'pwa'],\n",
-       " 'ጸ': ['se', 'sa', 's@', 'tsa'],\n",
+       " 'ጸ': ['se', 'sa', 'tsa'],\n",
        " 'ጹ': ['tsu', 'su'],\n",
        " 'ጺ': ['tsi', 'si'],\n",
        " 'ጻ': ['sa', 'tsa'],\n",
@@ -1773,14 +1773,14 @@
        " 'ጽ': ['se', 's', 'si'],\n",
        " 'ጾ': ['tso', 'swo', 'so'],\n",
        " 'ጿ': ['', 'swa'],\n",
-       " 'ፀ': ['ca', 'tsa', 's@', 'da', \"'se\", 'sa'],\n",
+       " 'ፀ': ['ca', 'tsa', 'da', \"'se\", 'sa'],\n",
        " 'ፁ': [\"'su\", 'su', 'du', 'tsu', 'cu'],\n",
        " 'ፂ': ['di', 'tsi', 'ci', 'si', \"'si\"],\n",
        " 'ፃ': ['ca', 'tsa', 'da', \"'sa\", 'sa'],\n",
        " 'ፄ': ['tse', 'de', 'ce', 'se', 'sye', \"'se\"],\n",
        " 'ፅ': [\"'s\", 'si', 'de', 'ce'],\n",
-       " 'ፆ': [\"'so\", 's@', 'co', 'do', 'tso', 'swo', 'so'],\n",
-       " 'ፈ': ['f@', 'fe', 'fa'],\n",
+       " 'ፆ': [\"'so\", 'co', 'do', 'tso', 'swo', 'so'],\n",
+       " 'ፈ': ['fe', 'fa'],\n",
        " 'ፉ': ['fu'],\n",
        " 'ፊ': ['fi'],\n",
        " 'ፋ': ['fa'],\n",
@@ -1792,7 +1792,7 @@
        " 'ፏ': ['', 'fwa'],\n",
        " 'ᎊ': ['', 'fwe'],\n",
        " 'ᎋ': ['', 'fw', 'fwe'],\n",
-       " 'ፐ': ['pa', 'pe', 'p@'],\n",
+       " 'ፐ': ['pa', 'pe'],\n",
        " 'ፑ': ['pu'],\n",
        " 'ፒ': ['pi'],\n",
        " 'ፓ': ['pa'],\n",
@@ -1809,7 +1809,7 @@
        " 'ፚ': ['', '~fi', 'fya']}"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1822,13 +1822,15 @@
     "\n",
     "lookup_simp = {}\n",
     "for key in lookup.keys():\n",
-    "    lookup_simp[key] = list(set([unidecode.unidecode(v).lower() for v in lookup[key]]))\n",
+    "    values = list(set([unidecode.unidecode(v).lower() for v in lookup[key]]))\n",
+    "    lookup_simp[key] = [v for v in values if '@' not in v]\n",
+    "    \n",
     "lookup_simp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1849,17 +1851,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Every time you run it, a different transcription"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"ineme wenidemwoc hoyi y@siga 'enid@ mehwona'tchehu  bekrisitosem hsanati @ned@ m@hwona'hu 'enigi m@nef@sawjani inid@ m@honachu lenageratchehu alicalihume \""
+       "\"`enyem wenidimochi hoyi jasega 'enda mehonahu  bakersetosime hi'sana'ti inde mahonatchehu inji menfesawejane 'enida mehonacihu lna'geratchehu alilhume \""
       ]
      },
-     "execution_count": 277,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1868,6 +1877,145 @@
     "transliterate(\"\"\"እኔም፥ ወንድሞች ሆይ፥ የሥጋ እንደ መሆናችሁ፥ \n",
     "በክርስቶስም ሕፃናት እንደ መሆናችሁ እንጂ መንፈሳውያን እንደ \n",
     "መሆናችሁ ልናገራችሁ አልቻልሁም።\"\"\", simple=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"'enyemi wenedmotche hwoy ya'sga inida mahwonahu  bakresetosim hecanat `enede mahona'cehu ineji menifasawijan `enda mahwonatchehu linagarahu 'altchalehumi \""
+      ]
+     },
+     "execution_count": 290,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transliterate(\"\"\"እኔም፥ ወንድሞች ሆይ፥ የሥጋ እንደ መሆናችሁ፥ \n",
+    "በክርስቶስም ሕፃናት እንደ መሆናችሁ እንጂ መንፈሳውያን እንደ \n",
+    "መሆናችሁ ልናገራችሁ አልቻልሁም።\"\"\", simple=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"'enyeme wandemwochi hoye yasiga 'enide mahwona'hu  bekirisitosmi hisana'ti 'enida mahona'hu `endji manefasawyan `enide mahonahu lna'garacihu `alecalihume \""
+      ]
+     },
+     "execution_count": 291,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transliterate(\"\"\"እኔም፥ ወንድሞች ሆይ፥ የሥጋ እንደ መሆናችሁ፥ \n",
+    "በክርስቶስም ሕፃናት እንደ መሆናችሁ እንጂ መንፈሳውያን እንደ \n",
+    "መሆናችሁ ልናገራችሁ አልቻልሁም።\"\"\", simple=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"ineme wenedmwotche hwoyi yasega `eneda mehona'chu  bekeresetosim hsanati 'enida mahwonatchehu in manefasawiyani inede mahwona'cehu lna'garahu 'alichalehum \""
+      ]
+     },
+     "execution_count": 292,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transliterate(\"\"\"እኔም፥ ወንድሞች ሆይ፥ የሥጋ እንደ መሆናችሁ፥ \n",
+    "በክርስቶስም ሕፃናት እንደ መሆናችሁ እንጂ መንፈሳውያን እንደ \n",
+    "መሆናችሁ ልናገራችሁ አልቻልሁም።\"\"\", simple=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"`enemi wendmwoce hwoje ja'sga inida mehona'cihu  bekiresitosemi hecana't 'enide mehwonachihu `eni manifasawejan inida mehwona'tchehu lnagaratchehu alecalhume \""
+      ]
+     },
+     "execution_count": 293,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transliterate(\"\"\"እኔም፥ ወንድሞች ሆይ፥ የሥጋ እንደ መሆናችሁ፥ \n",
+    "በክርስቶስም ሕፃናት እንደ መሆናችሁ እንጂ መንፈሳውያን እንደ \n",
+    "መሆናችሁ ልናገራችሁ አልቻልሁም።\"\"\", simple=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"`enyemi wandemwochi hwoy ja'sga `enede mehwonachihu  bekerisitwosmi h'sanate inda mahwonacihu inji menfesawyani `eneda mahona'chu lnagaracehu 'alichalihume \""
+      ]
+     },
+     "execution_count": 294,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transliterate(\"\"\"እኔም፥ ወንድሞች ሆይ፥ የሥጋ እንደ መሆናችሁ፥ \n",
+    "በክርስቶስም ሕፃናት እንደ መሆናችሁ እንጂ መንፈሳውያን እንደ \n",
+    "መሆናችሁ ልናገራችሁ አልቻልሁም።\"\"\", simple=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Simple=False` to allow accents and `@`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ɪnēm wånɪdĕmʷotchĕ hōyï yesɪga ïnde măhonāčehū  bɑkresïtōsĕm hï‘Sanātɪ ʼenïdɑ məhōnachïhū ənĕji mɑnefɑsāwɪjāne əneda mahōnāʼčehū lɪnāʼgărahu ʼalïtchalehumɪ '"
+      ]
+     },
+     "execution_count": 295,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transliterate(\"\"\"እኔም፥ ወንድሞች ሆይ፥ የሥጋ እንደ መሆናችሁ፥ \n",
+    "በክርስቶስም ሕፃናት እንደ መሆናችሁ እንጂ መንፈሳውያን እንደ \n",
+    "መሆናችሁ ልናገራችሁ አልቻልሁም።\"\"\", simple=False)"
    ]
   },
   {
