--- a/Transliteration.ipynb
+++ b/Transliteration.ipynb
@@ -1826,6 +1826,7 @@
     "    lookup = json.load(f)\n",
     "\n",
     "lookup['።'] = ['.']\n",
+    "lookup['፡'] = [' ']\n",
     "lookup['፣'] = [',']\n",
     "lookup['፤'] = [';']\n",
     "lookup['፥'] = [':']\n",
@@ -2269,26 +2270,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* inyeme: wendemoci hoye: jasiga 'enide mahonacihu: bakeristosime h'sana'ti 'enide mahona'chu inidji menifasawiyane `ende mehonahu lena'geracehu `alitchalihume.\n",
-      "* inyeme: wanedmwoci hoy: jasiga `ende mehonatchehu: bakeresetoseme hdanate 'eneda mehwonacihu 'engi manefesawiyani inede mehonachihu lina'gerachihu `allihume.\n",
-      "* 'enem: wenidmwochi hwoye: yasiga `eneda mehonahu: bakirisetosm hetsana'te 'enda mahwonatchehu 'enigi manifesawjane inida mehwona'hu lenagerahu 'alicalihum.\n",
-      "* inem: wanidemwoce hoye: jasiga `eneda mahonacihu: bekresitwosmi hidana'te inde mahwonachihu ineji menfesawejane inida mahwona'chu lina'garachu 'alichalihume.\n",
-      "* inyem: wandmwochi hwoyi: ja'sga inde mahwonachu: bekresetosmi hesanat 'eneda mehona'tchehu `engi manefesawiyani `enda mahonacehu lina'geratchehu `alcalihume.\n"
+      "* manemi sawi bihone yacikanye seqayi 'endayidersibete wayime kesebi'awi afasasame wec jahwona yatewarade tegebar weyimi qtati 'ajefetsamebetime.\n",
+      "* manemi sewi bihone yechikanye skaye 'enedayederesebet weyeme kesabi`awi afesasami wetch'e yehwona jatawared tegbare wayimi kitat 'ayefasamebatmi.\n",
+      "* manem sewi bihwoni jatch'ekane seqay inidayderisibat weyme kesabeawi 'afetsasemi weci yahona jatewarad tagbar weyeme qetate ayifasamibetim.\n",
+      "* manim sawe bihwon yatch'ekanye skay indayedarsibat wayeme kesabe`awi 'afatsaseme weci yahona yatewarad tagbari waymi qtate `ayefesemibetm.\n",
+      "* maneme saw bihwoni jacekane sqaje 'enedayidarsebate weyme kesebe`awi 'afetsatsame wece jahwone yatawared tegbar wejemi qtat ayfesemibetem.\n"
      ]
     }
    ],
    "source": [
+    "import re\n",
+    "\n",
+    "text = \"\"\"ማንም፡ሰው፡ቢሆን፡የጭካኔ፡ስቃይ፡እንዳይደርስበት፡\n",
+    "            ወይም፡ከሰብዓዊ፡አፈጻጸም፡ውጭ፡የሆነ፡የተዋረድ፡\n",
+    "            ተግባር፡ወይም፡ቅጣት፡አይፈጸምበትም።\"\"\"\n",
+    "text = re.sub(' +', ' ', text).replace(\"\\n\", \"\")\n",
+    "\n",
     "for _ in range(5):\n",
-    "    result = transliterate(\"\"\"እኔም፥ ወንድሞች ሆይ፥ የሥጋ እንደ መሆናችሁ፥ \n",
-    "በክርስቶስም ሕፃናት እንደ መሆናችሁ እንጂ መንፈሳውያን እንደ \n",
-    "መሆናችሁ ልናገራችሁ አልቻልሁም።\"\"\", simple=True)\n",
+    "    result = transliterate(text, simple=True)\n",
     "    print(f\"* {result}\")"
    ]
   },
@@ -2301,26 +2307,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* ʾĕnémɪ: wanɪdɪmō hōjĕ: yeśegā ɪnĕdɑ məhonācɪhu: băkɪrstosme hɪḍānatï ïnĕde măhōnāchu in mănĕfəsāwyanɪ ɪnïdä məhōnachïhu lɪnagəracɪhū älchālehūmĕ.\n",
-      "* ineme: wanɪdɪmʷoče hoy: yasïgā ɪnɪdɑ mahonāčehu: băkerïsɪtōsĕmĕ ḥĕḍānāʼtï ïndä mahʷonāʼhū ʾĕnɪjī mănïfăsawɪyane ənɪdă mähʷonahū lïnagăracɪhu alechālïhūm.\n",
-      "* Ineme: wanɪdĕmōče hʷoyï: yəsïga inïde mɑhōnāchu: bəkĕrïsɪtosĕm hɪḍanāʼtĕ ɪneda mähʷonāchïhu Injī mənĕfɑsawejānĕ inïdă mɑhʷonāʼchïhū lĕnāgaračehu ʼalĕlehumɪ.\n",
-      "* inEm: wandïmʷochï hoye: jaśega ʼenĕdɑ mɑhōnāʼhū: bekïrïsïtʷosemɪ ḥĕtsānāt ɪndă mehōnahu inji manïfăsāwĕyānɪ ɪnĕdă mähʷonāchïhū lɪnāgeratchĕhū älĕčalĕhūmĕ.\n",
-      "* inemɪ: wänedmocɪ hōje: yaśega inde mähōnāʼčehu: băkïrïsïtʷosɪmɪ Hc̣ānāʼt ɪnɪdɑ mähonāhū əne mänɪfəsāweyānï inɪda mahonāʼtchĕhū lenāʼgărachïhū ʾälĕchālïhūme.\n"
+      "* mānïme sewe bihʷon yakane sïkāyɪ inedajĕdɑrsɪbat wăjemɪ kasɑbāwī ʾăfäSaSemɪ wɪcḥï yahōna yätewarədï tɑgebare wəyɪm ḳïTatɪ ʾăyïfəSəmĕbətɪm.\n",
+      "* mānemĕ săwɪ bihōne yakanʸe sĕkāyɪ ʼenɪdayderesïbet weym kesəbïāwi ʾäfăṣaṣam wïtch’ĕ yahōna jatewaradï tägïbārĕ wäjĕmĕ qeṭatĕ ʾäyïfăSemĕbătme.\n",
+      "* mānemĕ säwe bihʷonï yäCkāné seqāyɪ ʾĕnɪdayïdarĕsebɑt wayemɪ käsabïawi āfaṣāSəmĕ wïC yahonä jătewārade tägbarĕ wăyïm qeṭatï āyfəṣamĕbätĕmɪ.\n",
+      "* manïm säwĕ bīhōnĕ yeCɪkānē sĕḳayï əndayedarsbɑtĕ wăjĕmɪ kəsäbʿawi äfäṣāṣɑmɪ we jăhōnə jatɑwārɑd tagɪbār wajem qṭāt äyɪfäṣămïbatĕme.\n",
+      "* mānĕm săw bihonɪ jaCkanE sɪḳayï ʼenedayɪderesĕbăt wäjĕme kəsɑbĕāwī āfăSaṣäm wɪCɪ yəhōnə yatəwarădï tagbarɪ wejemï qṭat ʾăyɪfetsamɪbɑtĕme.\n"
      ]
     }
    ],
    "source": [
     "for _ in range(5):\n",
-    "    result = transliterate(\"\"\"እኔም፥ ወንድሞች ሆይ፥ የሥጋ እንደ መሆናችሁ፥ \n",
-    "በክርስቶስም ሕፃናት እንደ መሆናችሁ እንጂ መንፈሳውያን እንደ \n",
-    "መሆናችሁ ልናገራችሁ አልቻልሁም።\"\"\", simple=False)\n",
+    "    result = transliterate(text, simple=False)\n",
     "    print(f\"* {result}\")"
    ]
   },
